--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="intro row ">
         <div class="intro-content col-12 ">
             <h3>Hello I'm</h3>
-            <span>Omm Patre</span>
+            <span>Om Patre</span>
             <br>
             <span id="iama">I am a </span>
             <span id="typed"></span>   
