--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
      <!--Bootstrap CSS  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-
+    <!-- <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <!-- <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"> -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"> -->
     <!-- <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"> -->
@@ -137,8 +137,8 @@
                     <span class="badge badge-secondary">BOOTSTRAP 4</span>
                 </div>
                 <div class="buttons">
-                    <div class=""><button class="btn btn-outline-success">Read More</button></div>
-                    <div class="" ><button class="btn btn-outline-success">GitHub</button></div>
+                    <div class=""><button class="btn btn-outline-secondary">Read More</button></div>
+                    <div class="" ><button class="btn btn-outline-secondary">GitHub</button></div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 project">
@@ -155,8 +155,8 @@
                     <span class="badge badge-secondary">FLASK-SQLALCHEMY</span>
                 </div>
                 <div class="buttons ">
-                    <div class=""><button class="btn btn-outline-success">Read More</button></div>
-                    <div class="" ><button class="btn btn-outline-success">GitHub</button></div>
+                    <div class=""><button class="btn btn-outline-secondary">Read More</button></div>
+                    <div class="" ><button class="btn btn-outline-secondary">GitHub</button></div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 project">
@@ -172,8 +172,8 @@
                     <span class="badge badge-secondary">FLASK-SQLALCHEMY</span>
                 </div>
                 <div class="buttons ">
-                    <div class=""><button class="btn btn-outline-success">Read More</button></div>
-                    <div class="" ><button class="btn btn-outline-success">GitHub</button></div>
+                    <div class=""><button class="btn btn-outline-secondary">Read More</button></div>
+                    <div class="" ><button class="btn btn-outline-secondary">GitHub</button></div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 project">
@@ -189,8 +189,8 @@
                     <span class="badge badge-secondary">FLASK-SQLALCHEMY</span>
                 </div>
                 <div class="buttons ">
-                    <div class=""><button class="btn btn-outline-success">Read More</button></div>
-                    <div class="" ><button class="btn btn-outline-success">GitHub</button></div>
+                    <div class=""><button class="btn btn-outline-secondary">Read More</button></div>
+                    <div class="" ><button class="btn btn-outline-secondary">GitHub</button></div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 project">
@@ -205,8 +205,8 @@
                     <span class="badge badge-secondary">JAVASCRIPT</span>
                 </div>
                 <div class="buttons ">
-                    <div class=""><button class="btn btn-outline-success">Read More</button></div>
-                    <div class="" ><button class="btn btn-outline-success">GitHub</button></div>
+                    <div class=""><button class="btn btn-outline-secondary">Read More</button></div>
+                    <div class="" ><button class="btn btn-outline-secondary">GitHub</button></div>
                 </div>
             </div>
         </div>
@@ -219,17 +219,39 @@
         <div class="button_cont button" align="center">
             <a class="example_b" href="mailto:ompatre7@gmail.com" >SEND MESSAGE</a>
         </div>
-        <div class="logos ">
+        <!-- <div class="logos ">
             <a class="insta btn btn-social-icon btn-instagram" href="http://google.com/+"><i class="fa fa-instagram fa-lg"></i></a>
             <a class="social btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
             <a class="social btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class=" fa fa-linkedin fa-lg"></i></a>
             <a class="social btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
             <a class="social btn btn-social-icon btn-pinterest" href="http://youtube.com/"><i class="fa fa-pinterest fa-lg" aria-hidden="true" ></i></a>
-        </div>
-        <div class=" copyright">
-            <div>
-                <p>© Copyright 2020 Om Patre</p>
+        -->
+        
+        <div class="logos">
+            <br/><br/>
+            <div class="col-md-12">
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-codepen"><i class="fa fa-codepen"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-dropbox"><i class="fa fa-dropbox"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-facebook"><i class="fa fa-facebook"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-github"><i class="fa fa-github-alt"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-google-plus"><i class="fa fa-google-plus"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-instagram"><i class="fa fa-instagram"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-jsfiddle"><i class="fa fa-jsfiddle"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-pinterest"><i class="fa fa-pinterest"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-reddit"><i class="fa fa-reddit"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-skype"><i class="fa fa-skype"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-stack-overflow"><i class="fa fa-stack-overflow"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-steam"><i class="fa fa-steam"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-twitch"><i class="fa fa-twitch"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-twitter"><i class="fa fa-twitter"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-wordpress"><i class="fa fa-wordpress"></i></a>
+                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-youtube"><i class="fa fa-youtube"></i></a>
             </div>
+        </div>
+
+        <div class="copyright">
+            © Copyright 2020 Om Patre
         </div>
     </div>
     <!-- Bootstrap JS -->
