--- a/index.html
+++ b/index.html
@@ -230,23 +230,23 @@
         <div class="logos">
             <br/><br/>
             <div class="col-md-12">
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-codepen"><i class="fa fa-codepen"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-dropbox"><i class="fa fa-dropbox"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-facebook"><i class="fa fa-facebook"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-github"><i class="fa fa-github-alt"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-google-plus"><i class="fa fa-google-plus"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-instagram"><i class="fa fa-instagram"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-jsfiddle"><i class="fa fa-jsfiddle"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-pinterest"><i class="fa fa-pinterest"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-reddit"><i class="fa fa-reddit"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-skype"><i class="fa fa-skype"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-stack-overflow"><i class="fa fa-stack-overflow"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-steam"><i class="fa fa-steam"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-twitch"><i class="fa fa-twitch"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-twitter"><i class="fa fa-twitter"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-wordpress"><i class="fa fa-wordpress"></i></a>
-                <a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-youtube"><i class="fa fa-youtube"></i></a>
+                <a href="" target="_blank" class="btn-social btn-codepen"><i class="fa fa-codepen"></i></a>
+                <a href="" target="_blank" class="btn-social btn-dropbox"><i class="fa fa-dropbox"></i></a>
+                <a href="" target="_blank" class="btn-social btn-facebook"><i class="fa fa-facebook"></i></a>
+                <a href="" target="_blank" class="btn-social btn-github"><i class="fa fa-github-alt"></i></a>
+                <a href="" target="_blank" class="btn-social btn-google-plus"><i class="fa fa-google-plus"></i></a>
+                <a href="" target="_blank" class="btn-social btn-instagram"><i class="fa fa-instagram"></i></a>
+                <a href="" target="_blank" class="btn-social btn-jsfiddle"><i class="fa fa-jsfiddle"></i></a>
+                <a href="" target="_blank" class="btn-social btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                <a href="" target="_blank" class="btn-social btn-pinterest"><i class="fa fa-pinterest"></i></a>
+                <a href="" target="_blank" class="btn-social btn-reddit"><i class="fa fa-reddit"></i></a>
+                <a href="" target="_blank" class="btn-social btn-skype"><i class="fa fa-skype"></i></a>
+                <a href="" target="_blank" class="btn-social btn-stack-overflow"><i class="fa fa-stack-overflow"></i></a>
+                <a href="" target="_blank" class="btn-social btn-steam"><i class="fa fa-steam"></i></a>
+                <a href="" target="_blank" class="btn-social btn-twitch"><i class="fa fa-twitch"></i></a>
+                <a href="" target="_blank" class="btn-social btn-twitter"><i class="fa fa-twitter"></i></a>
+                <a href="" target="_blank" class="btn-social btn-wordpress"><i class="fa fa-wordpress"></i></a>
+                <a href="" target="_blank" class="btn-social btn-youtube"><i class="fa fa-youtube"></i></a>
             </div>
         </div>
 
