--- a/index.html
+++ b/index.html
@@ -257,6 +257,14 @@
             © Copyright 2020 Om Patre
         </div>
     </div>
+
+    <!-- Loader -->
+    <div class="loader-wrapper">
+        <div class="loader">
+            <span></span>
+            <span></span>
+        </div>
+    </div>
     <!-- </div> -->
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>    
@@ -275,6 +283,10 @@
                 loop: true,
                 cursorChar: "|",
             });
+        });
+
+        $(window).on("load",function(){
+            $(".loader-wrapper").fadeOut('slow');
         });
     </script>
     
